[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4",
    "setuptools_scm_git_archive",
]

[tool.setuptools_scm]
write_to = "cfgrib/version.py"
write_to_template = "# don't change, don't track in version control\n__version__ = \"{version}\""

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.pytest.ini_options]
norecursedirs = [
    "build",
    "docs",
    ".tox",
]

[tool.coverage.run]
branch = true
omit = ["setup.py"]
